--- a/Lucuber/Views/Cell/ScoreCell/ScoreCell.xib
+++ b/Lucuber/Views/Cell/ScoreCell/ScoreCell.xib
@@ -14,7 +14,7 @@
             <rect key="frame" x="0.0" y="0.0" width="241" height="26"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="241" height="25"/>
+                <rect key="frame" x="0.0" y="0.0" width="241" height="25.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="OvalBlue" translatesAutoresizingMaskIntoConstraints="NO" id="09v-AC-AMx">
@@ -24,9 +24,9 @@
                             <constraint firstAttribute="height" constant="5" id="iR6-ym-d0M"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GPt-CT-XZz" customClass="ScoreTimerLabel" customModule="Lucuber" customModuleProvider="target">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="GPt-CT-XZz" customClass="ScoreTimerLabel" customModule="Lucuber" customModuleProvider="target">
                         <rect key="frame" x="35" y="0.0" width="186" height="25.5"/>
-                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
+                        <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
