--- a/Lucuber/Base.lproj/Main.storyboard
+++ b/Lucuber/Base.lproj/Main.storyboard
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="YrT-be-Bet">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="YrT-be-Bet">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,7 +22,7 @@
                         <segue destination="k94-hk-Vin" kind="relationship" relationship="viewControllers" id="qzo-6x-csk"/>
                         <segue destination="gCI-yF-HLj" kind="relationship" relationship="viewControllers" id="CT5-8m-xqp"/>
                         <segue destination="0bA-YL-9P3" kind="relationship" relationship="viewControllers" id="tXR-Z8-hMc"/>
-                        <segue destination="W5G-FU-YBQ" kind="relationship" relationship="viewControllers" id="peL-fr-gL3"/>
+                        <segue destination="Xjb-3J-BZ5" kind="relationship" relationship="viewControllers" id="Xei-Op-H1Y"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MfM-Sz-cSB" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -67,15 +69,15 @@
             </objects>
             <point key="canvasLocation" x="-110" y="-47"/>
         </scene>
-        <!--Setting-->
-        <scene sceneID="SdS-79-661">
+        <!--Profile-->
+        <scene sceneID="uU2-oZ-EhN">
             <objects>
-                <viewControllerPlaceholder storyboardName="Setting" id="W5G-FU-YBQ" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="QKI-tZ-r6C"/>
+                <viewControllerPlaceholder storyboardName="Profile" id="Xjb-3J-BZ5" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="fZL-ho-8Xa"/>
                 </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="VTi-Us-p60" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NrY-6Q-DFp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-118" y="79"/>
+            <point key="canvasLocation" x="-88" y="146"/>
         </scene>
     </scenes>
 </document>
